--- a/characters.html
+++ b/characters.html
@@ -496,6 +496,103 @@
       </div>
     </section>
 
+    <!-- CH3 DIVIDER -->
+    <section style="padding-top:60px; padding-bottom:0;">
+      <div style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; color:var(--echo-teal); margin-bottom:12px; display:flex; align-items:center; gap:12px;"><span style="color:var(--dim);">//</span> CHAPTER 003 — NEW CHARACTERS</div>
+      <h2 style="font-family:var(--font-display); font-size:40px; font-weight:800; text-transform:uppercase; color:var(--dim); margin-bottom:4px;">The Complete Roster</h2>
+      <p style="font-size:15px; font-weight:300; color:var(--dim); margin-bottom:0;">Introduced in Chapters 003–004</p>
+    </section>
+
+    <!-- MARDA -->
+    <section style="padding-top:16px;" id="marda">
+      <div style="background:var(--surface); border:1px solid var(--border); border-left:3px solid var(--blood); padding:60px;" class="fade-in">
+        <div style="display:flex; justify-content:space-between; align-items:flex-start; flex-wrap:wrap; gap:32px; margin-bottom:48px; padding-bottom:40px; border-bottom:1px solid var(--border);">
+          <div>
+            <div style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; color:var(--blood); margin-bottom:12px;">// CORE TEAM · CHAPTER 003</div>
+            <h2 style="font-family:var(--font-display); font-size:72px; font-weight:800; text-transform:uppercase; line-height:1; color:#fff; margin-bottom:8px;">MARDA</h2>
+            <div style="font-family:var(--font-mono); font-size:14px; letter-spacing:0.2em; color:var(--blood);">THE COORDINATOR · CLASSIFICATION: SUPPRESSED</div>
+          </div>
+          <div style="text-align:right; font-family:var(--font-mono); font-size:11px; color:var(--dim); line-height:2;">
+            <div>AGE: 54</div>
+            <div>CLASS: SUPPRESSED — 20 YR</div>
+            <div>ORIGIN: ASHFIELD — NATIVE · PRE-FRACTURE</div>
+            <div>STATUS: ACTIVE · ASHFIELD DIVER COORD.</div>
+          </div>
+        </div>
+        <div style="display:grid; grid-template-columns:2fr 1fr; gap:60px; flex-wrap:wrap;">
+          <div>
+            <h3 style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; text-transform:uppercase; color:var(--dim); margin-bottom:20px; padding-bottom:8px; border-bottom:1px solid var(--ghost);">PROFILE</h3>
+            <p style="font-size:17px; font-weight:300; color:var(--pale); line-height:1.8; margin-bottom:24px;">She was in the Ashfield before the fractures. Born there, raised there, stayed there when everyone who could leave did. When the first Void fracture tore open three blocks from her apartment, she didn't run. She went to look at it. She was in there for four hours. She came out positive for Echo resonance — class unknown, the classification system didn't exist yet — and she suppressed the result and never told a soul for twenty years.</p>
+            <p style="font-size:17px; font-weight:300; color:var(--pale); line-height:1.8; margin-bottom:24px;">She built the independent Void diver coordination network because the Ashfield needed someone tracking fracture behavior without corporate filtering, and because the Signal she heard in that first fracture told her to keep people going in until the right one came out with an answer. She trained Kairo when he was sixteen. She never told him what she knew. She waited until three years of watching him not die was enough evidence to call it certainty rather than hope.</p>
+            <p style="font-size:17px; font-weight:300; color:var(--pale); line-height:1.8; margin-bottom:40px;">Her ability — twenty years suppressed, never tested, operating on instinct — is fracture empathy. She reads Void environments the way experienced surgeons read vital signs: through a combination of deep pattern recognition and something Echo-adjacent that she has never let herself name. She knows when a fracture is stable, stressed, or building toward something, as naturally as she knows when weather is changing. This makes her, functionally, the most experienced Void navigator alive. She just never told Meridian.</p>
+            <h3 style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; text-transform:uppercase; color:var(--dim); margin-bottom:20px; padding-bottom:8px; border-bottom:1px solid var(--ghost);">SIGNATURE LINES</h3>
+            <div style="display:flex; flex-direction:column; gap:8px;">
+              <div style="font-style:italic; font-size:15px; color:var(--blood); padding:12px; border-left:2px solid var(--blood);">"I have been coordinating people going into fractures for twenty years. The trick is to never let them see you're scared. After a while you stop being scared. Then the trick is harder."</div>
+              <div style="font-style:italic; font-size:15px; color:var(--blood); padding:12px; border-left:2px solid var(--blood);">"You trained because you wanted to survive. I trained you because I thought you were going to save somebody. I'm glad I was right about the second one."</div>
+              <div style="font-style:italic; font-size:15px; color:var(--blood); padding:12px; border-left:2px solid var(--blood);">"The Ashfield keeps existing because the people in it decide it's worth existing. That's the only infrastructure that matters."</div>
+            </div>
+          </div>
+          <div>
+            <h3 style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; text-transform:uppercase; color:var(--dim); margin-bottom:20px; padding-bottom:8px; border-bottom:1px solid var(--ghost);">RESONANCE METRICS</h3>
+            <div class="ds-stat-block">
+              <div class="stat-bar"><div class="stat-label"><span>Raw Power</span><span>??/10</span></div><div class="stat-track"><div class="stat-fill red-fill" style="width:45%"></div></div></div>
+              <div class="stat-bar"><div class="stat-label"><span>Fracture Reading</span><span>10/10</span></div><div class="stat-track"><div class="stat-fill red-fill" style="width:100%"></div></div></div>
+              <div class="stat-bar"><div class="stat-label"><span>Field Experience</span><span>10/10</span></div><div class="stat-track"><div class="stat-fill red-fill" style="width:100%"></div></div></div>
+              <div class="stat-bar"><div class="stat-label"><span>Suppression Duration</span><span>20 YR</span></div><div class="stat-track"><div class="stat-fill red-fill" style="width:100%"></div></div></div>
+              <div class="stat-bar"><div class="stat-label"><span>Trust (Kairo)</span><span>10/10</span></div><div class="stat-track"><div class="stat-fill red-fill" style="width:100%"></div></div></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SABLE -->
+    <section style="padding-top:4px; padding-bottom:80px;" id="sable">
+      <div style="background:var(--surface); border:1px solid var(--border); border-left:3px solid var(--amber); padding:60px;" class="fade-in">
+        <div style="display:flex; justify-content:space-between; align-items:flex-start; flex-wrap:wrap; gap:32px; margin-bottom:48px; padding-bottom:40px; border-bottom:1px solid var(--border);">
+          <div>
+            <div style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; color:var(--amber); margin-bottom:12px;">// ALLY (FORMER ANTAGONIST) · CHAPTER 003</div>
+            <h2 style="font-family:var(--font-display); font-size:72px; font-weight:800; text-transform:uppercase; line-height:1; color:#fff; margin-bottom:8px;">SABLE</h2>
+            <div style="font-family:var(--font-mono); font-size:14px; letter-spacing:0.2em; color:var(--amber);">THE BETWEEN · VOIDBORN · PARTIAL CONVERSION</div>
+          </div>
+          <div style="text-align:right; font-family:var(--font-mono); font-size:11px; color:var(--dim); line-height:2;">
+            <div>AGE: 24</div>
+            <div>CLASS: VOIDBORN · PARTIAL — LEFT SIDE</div>
+            <div>ORIGIN: MERIDIAN FIELD OPS (FMR)</div>
+            <div>STATUS: DEFECTED · INTEGRATION PENDING</div>
+          </div>
+        </div>
+        <div style="display:grid; grid-template-columns:2fr 1fr; gap:60px; flex-wrap:wrap;">
+          <div>
+            <h3 style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; text-transform:uppercase; color:var(--dim); margin-bottom:20px; padding-bottom:8px; border-bottom:1px solid var(--ghost);">PROFILE</h3>
+            <p style="font-size:17px; font-weight:300; color:var(--pale); line-height:1.8; margin-bottom:24px;">Sable was a Meridian field operative before the conversion — good at their job, unremarkable in the way Meridian preferred its non-Resonant assets to be unremarkable. Two years ago, a standard fracture operation went wrong in a way that wasn't standard at all: Vael had arranged it. He needed a test subject for partial Voidborn integration, and Sable was the operational profile that fit his parameters. They came out of the fracture with their left side converted. One eye full amber. The left arm and shoulder operating on the dead universe's physics.</p>
+            <p style="font-size:17px; font-weight:300; color:var(--pale); line-height:1.8; margin-bottom:24px;">Vael told them this was an accident. That he could fix it or finish it, depending on their cooperation. He reversed the conversion four times as demonstration of leverage. Each reversal left permanent scarring in Sable's conversion architecture — the two sides fight harder after every reversal, which is why the static never stops. Two years of this. Two years of being a weapon held together by someone else's promise of resolution. Until Orin touched them and the static stopped for three seconds, and the entire framework Vael had built around Sable's compliance dissolved into the question: <em>what if I didn't need him anymore?</em></p>
+            <p style="font-size:17px; font-weight:300; color:var(--pale); line-height:1.8; margin-bottom:40px;">Sable's ability — the left side's partial conversion — allows them to phase through matter on that side, operate immune to force on that side, and perceive the Void network's structure through the dead universe's own sensory logic. They are, in a way, a partial version of what Kairo becomes at the end of Volume 1 — which is why Orin's Iteration read on them produced such a specific, necessary recognition. And why the integration, when it completes, will make Sable the closest thing to a native interpreter of the dead universe's physics that exists outside of Kairo himself.</p>
+            <h3 style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; text-transform:uppercase; color:var(--dim); margin-bottom:20px; padding-bottom:8px; border-bottom:1px solid var(--ghost);">SIGNATURE LINES</h3>
+            <div style="display:flex; flex-direction:column; gap:8px;">
+              <div style="font-style:italic; font-size:15px; color:var(--amber); padding:12px; border-left:2px solid var(--amber);">"I have been half one thing and half another for two years. You don't know what that's like until you know what it's like to be whole for three seconds."</div>
+              <div style="font-style:italic; font-size:15px; color:var(--amber); padding:12px; border-left:2px solid var(--amber);">"He made the static worse every time he used it as leverage. I kept going back because I didn't have another option. Now I have another option."</div>
+              <div style="font-style:italic; font-size:15px; color:var(--amber); padding:12px; border-left:2px solid var(--amber);">"I've been a weapon for two years. I don't know what else I am. I'm going to find out."</div>
+            </div>
+          </div>
+          <div>
+            <h3 style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; text-transform:uppercase; color:var(--dim); margin-bottom:20px; padding-bottom:8px; border-bottom:1px solid var(--ghost);">RESONANCE METRICS</h3>
+            <div class="ds-stat-block">
+              <div class="stat-bar"><div class="stat-label"><span>Left Side Power</span><span>09/10</span></div><div class="stat-track"><div class="stat-fill amber-fill" style="width:90%"></div></div></div>
+              <div class="stat-bar"><div class="stat-label"><span>Right Side Power</span><span>04/10</span></div><div class="stat-track"><div class="stat-fill amber-fill" style="width:40%"></div></div></div>
+              <div class="stat-bar"><div class="stat-label"><span>Integration Progress</span><span>02/10</span></div><div class="stat-track"><div class="stat-fill amber-fill" style="width:20%"></div></div></div>
+              <div class="stat-bar"><div class="stat-label"><span>Void Perception</span><span>08/10</span></div><div class="stat-track"><div class="stat-fill amber-fill" style="width:80%"></div></div></div>
+              <div class="stat-bar"><div class="stat-label"><span>Post-Integration Est.</span><span>??/10</span></div><div class="stat-track"><div class="stat-fill amber-fill" style="width:100%"></div></div></div>
+            </div>
+            <div style="background:var(--panel); border:1px solid var(--amber-dim); padding:20px; margin-top:32px;">
+              <div style="font-family:var(--font-mono); font-size:9px; color:var(--amber); margin-bottom:10px; letter-spacing:0.2em;">END OF VOL 01 STATUS</div>
+              <p style="font-size:14px; font-weight:300; color:var(--pale); line-height:1.7; font-style:italic;">"Both sides synchronized. Both sides still. For the first time since the conversion began, Sable reaches out their left hand and lets the warm amber-gold light of the opened network touch their palm. Both sides feel it."</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer>
       <div class="foot-brand">Null <span style="color:var(--echo-teal)">Threshold</span></div>
       <p>© 2025 Original IP — All rights reserved</p>
