--- a/design-sheets.html
+++ b/design-sheets.html
@@ -486,6 +486,120 @@
       </div>
     </section>
 
+    <!-- CH3 DESIGN SHEETS -->
+    <section style="padding-bottom:0; padding-top:60px;">
+      <div style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; color:var(--echo-teal); margin-bottom:12px; display:flex; align-items:center; gap:12px;"><span style="color:var(--dim);">//</span> CHAPTERS 003–004 — NEW CHARACTER DESIGN SHEETS</div>
+      <h2 style="font-family:var(--font-display); font-size:40px; font-weight:800; text-transform:uppercase; color:var(--dim); margin-bottom:0;">The Complete Roster</h2>
+    </section>
+
+    <!-- MARDA DESIGN SHEET -->
+    <section style="padding-top:16px;">
+      <div class="design-sheet fade-in" id="ds-marda">
+        <div class="ds-header">
+          <div>
+            <div style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; color:var(--blood); margin-bottom:12px;">DESIGN SHEET · DS-007</div>
+            <div class="ds-name" style="color:var(--blood);">MARDA</div>
+            <div class="ds-designation" style="color:var(--blood);">THE COORDINATOR · SUPPRESSED RESONANT · FRACTURE EMPATHY</div>
+          </div>
+          <div style="text-align:right; font-family:var(--font-mono); font-size:10px; color:var(--dim); line-height:2.2;">
+            <div>AGE: 54 / HEIGHT: 5'6"</div>
+            <div>BUILD: SOLID · BUILT FOR ENDURANCE</div>
+            <div>HAIR: GREY-STREAKED BLACK · SHORT · PRACTICAL</div>
+            <div>EYES: DARK BROWN · READS EVERYTHING</div>
+            <div>SKIN: DEEP BROWN · WEATHERED · ASHFIELD-WORN</div>
+          </div>
+        </div>
+        <div class="ds-grid">
+          <div class="ds-section">
+            <h4>Silhouette Design Brief</h4>
+            <p>Marda is the visual anchor of the group — steady, grounded, the body language of someone who has been in the Ashfield long enough to move through it like it's an extension of herself. She is the oldest character in the core cast by twenty years and this should be visible: not weakness, not diminishment, but the specific physical authority that comes from being the most experienced person in any environment you put her in.</p>
+            <p style="margin-top:12px;">Her design should immediately communicate: this person has been doing this longer than anyone. Everything she wears is functional and worn-in. She has no time for anything that isn't useful. Her face is the face of someone who has delivered hard news with grace and celebrated small victories with genuine feeling — someone who has lived a full life in a place that makes full lives difficult.</p>
+          </div>
+          <div class="ds-section">
+            <h4>Costume — Base Design</h4>
+            <ul>
+              <li>Layered practical field clothing — Ashfield-manufactured, not corporate. Repaired multiple times with visible, competent mending.</li>
+              <li>Coordinator's comms unit: old hardware, analog, always on her belt. The model Kairo uses is the same brand — she gave him his first unit when he was sixteen.</li>
+              <li>Boots that have been re-soled twice. She's had them for twelve years.</li>
+              <li>A pendant worn under her shirt — never shown fully. Something from before. Pre-fracture. Non-negotiable character detail.</li>
+              <li>Reading glasses in a front pocket. She doesn't always use them. She sometimes puts them on to buy time to think.</li>
+            </ul>
+            <h4 style="margin-top:28px;">Color Palette</h4>
+            <div style="display:flex; flex-direction:column; gap:8px; margin-top:12px;">
+              <div style="display:flex; align-items:center; gap:12px;"><div style="width:32px;height:32px;background:#2d2418;border:1px solid var(--border);flex-shrink:0;"></div><span style="font-family:var(--font-mono);font-size:11px;color:var(--dim);">#2D2418 — Outer layer (deep warm brown)</span></div>
+              <div style="display:flex; align-items:center; gap:12px;"><div style="width:32px;height:32px;background:#4a3828;border:1px solid var(--border);flex-shrink:0;"></div><span style="font-family:var(--font-mono);font-size:11px;color:var(--dim);">#4A3828 — Mid layer (worn tobacco brown)</span></div>
+              <div style="display:flex; align-items:center; gap:12px;"><div style="width:32px;height:32px;background:#5a3a2a;border:1px solid var(--border);flex-shrink:0;"></div><span style="font-family:var(--font-mono);font-size:11px;color:var(--dim);">#5A3A2A — Skin (deep warm brown, Ashfield-weathered)</span></div>
+              <div style="display:flex; align-items:center; gap:12px;"><div style="width:32px;height:32px;background:#c8b890;border:1px solid var(--border);flex-shrink:0;"></div><span style="font-family:var(--font-mono);font-size:11px;color:var(--dim);">#C8B890 — Hair grey streaks (warm silver)</span></div>
+              <div style="display:flex; align-items:center; gap:12px;"><div style="width:32px;height:32px;background:#ff2d5540;border:1px solid var(--border);flex-shrink:0;"></div><span style="font-family:var(--font-mono);font-size:11px;color:var(--dim);">#FF2D5540 — Subtle ability glow when active (suppressed red)</span></div>
+            </div>
+          </div>
+          <div class="ds-section">
+            <h4>Ability Visual Language</h4>
+            <p><strong style="color:var(--blood);">Fracture Empathy:</strong> Twenty years suppressed, so the visual language is minimal and intimate. When Marda actively reads a Void environment, she goes still and her head tilts slightly — listening to something. Her hands, if she's near a fracture surface, trace patterns unconsciously. The only visual tell: her eyes gain the faintest red iridescence at the edges — not Echo teal, not amber, but the deep red of something that has been held down for a very long time.</p>
+            <p style="margin-top:12px;"><strong style="color:var(--blood);">Post-Reveal:</strong> Once she stops suppressing (Volume 2), the ability is more visible but still subtle compared to the others — a resonance in the air around her when she's in fracture environments, the way the Echo light bends slightly toward her. She's never fought. She's never needed to. Her ability is not combat-oriented and this is a deliberate choice. She's dangerous in every other way.</p>
+            <div style="background:var(--panel); border:1px solid var(--border); padding:16px; margin-top:20px;">
+              <div style="font-family:var(--font-mono);font-size:9px;color:var(--blood);margin-bottom:8px;letter-spacing:0.2em;">ANIMATION KEY</div>
+              <p style="font-size:13px;font-weight:300;color:var(--pale);line-height:1.6;">Marda's scenes should feel different from the younger characters' scenes — steadier camera, fewer dynamic angles, more weight in stillness. She's the one who has already processed the fear. Let her convey that.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SABLE DESIGN SHEET -->
+    <section style="padding-top:4px; padding-bottom:80px;">
+      <div class="design-sheet fade-in" id="ds-sable">
+        <div class="ds-header">
+          <div>
+            <div style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; color:var(--amber); margin-bottom:12px;">DESIGN SHEET · DS-008</div>
+            <div class="ds-name" style="color:var(--amber);">SABLE</div>
+            <div class="ds-designation" style="color:var(--amber);">THE BETWEEN · VOIDBORN PARTIAL · LEFT SIDE CONVERTED</div>
+          </div>
+          <div style="text-align:right; font-family:var(--font-mono); font-size:10px; color:var(--dim); line-height:2.2;">
+            <div>AGE: 24 / HEIGHT: 5'9"</div>
+            <div>BUILD: ATHLETIC · ASYMMETRIC</div>
+            <div>HAIR: BLACK · SHAVED CLOSE ON LEFT · LONGER ON RIGHT</div>
+            <div>EYES: RIGHT — DARK BROWN · LEFT — FULL AMBER</div>
+            <div>SKIN: LIGHT WARM / LEFT SIDE: AMBER-IRIDESCENT PATTERNS</div>
+          </div>
+        </div>
+        <div class="ds-grid">
+          <div class="ds-section">
+            <h4>Silhouette Design Brief</h4>
+            <p>Sable's design is built around visible asymmetry — the defining visual principle of their existence. The left side and the right side should read as slightly different from each other even in silhouette. Hair shorter on the left. Clothing worn differently on each side — not by choice, because the left side doesn't hold fabric the same way. The left hand visible more than the right — it's the part of them that is always slightly more real, or differently real, than the rest.</p>
+            <p style="margin-top:12px;">The wrongness of the left side should be visible but not grotesque. It's the wrongness of something that operates on different rules in the same body — a left arm that swings slightly late, a left shoulder that sits at a marginally different angle, a left eye that catches light when the right doesn't. The audience's eyes will want to slide off it. That's correct.</p>
+          </div>
+          <div class="ds-section">
+            <h4>Costume — Base Design</h4>
+            <ul>
+              <li>Meridian field gear (stripped of insignia post-defection) — functional, dark, fitted on the right side. The left side: always slightly ill-fitting because fabric doesn't drape over the converted geometry correctly.</li>
+              <li>Left arm often uncovered — not for display, because sleeves don't stay down properly on the left. The amber-iridescent absorption patterns on the left arm are always visible.</li>
+              <li>No jewelry. Nothing on the left side that could be disrupted by phasing.</li>
+              <li>Post-defection: Luca gives them a scarf that becomes a visual motif — worn asymmetrically, right side only. A small, deliberate act of choosing what the right side carries.</li>
+            </ul>
+            <h4 style="margin-top:28px;">Color Palette</h4>
+            <div style="display:flex; flex-direction:column; gap:8px; margin-top:12px;">
+              <div style="display:flex; align-items:center; gap:12px;"><div style="width:32px;height:32px;background:#1e2230;border:1px solid var(--border);flex-shrink:0;"></div><span style="font-family:var(--font-mono);font-size:11px;color:var(--dim);">#1E2230 — Right side base (standard dark)</span></div>
+              <div style="display:flex; align-items:center; gap:12px;"><div style="width:32px;height:32px;background:#ffb93044;border:1px solid var(--border);flex-shrink:0;"></div><span style="font-family:var(--font-mono);font-size:11px;color:var(--dim);">#FFB93044 — Left side overlay (amber iridescent translucent)</span></div>
+              <div style="display:flex; align-items:center; gap:12px;"><div style="width:32px;height:32px;background:#c4855a;border:1px solid var(--border);flex-shrink:0;"></div><span style="font-family:var(--font-mono);font-size:11px;color:var(--dim);">#C4855A — Skin right side (warm medium)</span></div>
+              <div style="display:flex; align-items:center; gap:12px;"><div style="width:32px;height:32px;background:#ffb930;border:1px solid var(--border);flex-shrink:0;"></div><span style="font-family:var(--font-mono);font-size:11px;color:var(--dim);">#FFB930 — Left eye / active phase (full amber)</span></div>
+              <div style="display:flex; align-items:center; gap:12px;"><div style="width:32px;height:32px;background:#fff8e8;border:1px solid var(--border);flex-shrink:0;"></div><span style="font-family:var(--font-mono);font-size:11px;color:var(--dim);">#FFF8E8 — Integration flash (warm white when static stops)</span></div>
+            </div>
+          </div>
+          <div class="ds-section">
+            <h4>Ability Visual Language</h4>
+            <p><strong style="color:var(--amber);">Phase Shift (Left Side):</strong> When the left side phases through matter, it becomes partially translucent — not invisible, but visually present in a way that matter normally isn't. The amber-iridescent patterns on the skin flare to full brightness. Objects passing through the phased left arm show distortion at the intersection point — reality briefly rendered in two versions simultaneously.</p>
+            <p style="margin-top:12px;"><strong style="color:var(--amber);">The Static:</strong> The visual representation of Sable's internal conflict — both sides fighting each other — manifests as a micro-vibration between the right and left sides. Almost imperceptible normally. Visible during stress as the left side's positioning going fractionally in and out of sync with the right. The audience should unconsciously track this as a tension indicator.</p>
+            <p style="margin-top:12px;"><strong style="color:var(--amber);">Integration Moment:</strong> When the static stops (during Orin's touch; during the Volume 1 ending) both sides go completely still simultaneously. The amber patterns dim to a soft pulse. For three seconds or three minutes, Sable looks entirely like one person. This should be beautiful.</p>
+            <div style="background:var(--panel); border:1px solid var(--amber-dim); padding:16px; margin-top:20px;">
+              <div style="font-family:var(--font-mono);font-size:9px;color:var(--amber);margin-bottom:8px;letter-spacing:0.2em;">VOLUME 2 NOTE</div>
+              <p style="font-size:13px;font-weight:300;color:var(--pale);line-height:1.6;">Post-integration, Sable's visual language shifts to full amber iridescence on both sides, synchronized. The wrongness resolves into something genuinely new — not fixed, not normal, but intentionally unified. Their design in Volume 2 should feel like the asymmetry finally making sense.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <div class="divider"></div>
     <footer>
       <div class="foot-brand">Null <span style="color:var(--echo-teal)">Threshold</span></div>
