--- a/index.html
+++ b/index.html
@@ -189,15 +189,15 @@
         </a>
         <a href="chapters.html#ch03" class="chapter-item">
           <span class="ch-num">CH. 003</span>
-          <span class="ch-title">The Inversion</span>
-          <span class="ch-desc">The fracture inverts. Kairo and Seya meet in the worst possible place at the worst possible time.</span>
-          <span class="ch-status coming">Coming Soon</span>
+          <span class="ch-title">Signal</span>
+          <span class="ch-desc">Vael goes all-in. Marda finally tells the truth. A new ally arrives broken, and Kairo's window blows open into something terrifying.</span>
+          <span class="ch-status available">Available</span>
         </a>
         <a href="chapters.html#ch04" class="chapter-item">
           <span class="ch-num">CH. 004</span>
           <span class="ch-title">Something That Lives Here</span>
-          <span class="ch-desc">Inside the inverted Void, they find something that shouldn't be possible: a person who survived two years in the dark.</span>
-          <span class="ch-status coming">Coming Soon</span>
+          <span class="ch-desc">The deep network. The Signal speaks. The real shape of Vael's plan. And Kairo makes the only choice the math has ever been building toward.</span>
+          <span class="ch-status available">Available</span>
         </a>
       </div>
       <div style="margin-top:16px;">
